[metadata]
name = mdachecker
description = 
long_description = file: README.md
long_description_type = text/markdown
author = Irfan Alibay
author_email = ialibay@mdanalysis.org
license = GPLv3
license_file = LICENSE
url = https://github.com/IAlibay/mdachecker
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
python_requires = >= 3.8
install_requires =
    numpy
    MDAnalysis

[options.extras_require]
test =
    pytest
    pytest-xdist

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440-post
versionfile_source = mdachecker/_version.py
versionfile_build = mdachecker/_version.py
tag_prefix = release-
parentdir_prefix = mdachecker-

